@@ -3,6 +3,14 @@
 	Backport from mainline
 	2017-02-17  Martin Liska  <mliska@suse.cz>
 
+	PR rtl-optimization/79574
+	* gcse.c (want_to_gcse_p): Prevent integer overflow.
+
+2017-03-22  Martin Liska  <mliska@suse.cz>
+
+	Backport from mainline
+	2017-02-17  Martin Liska  <mliska@suse.cz>
+
 	PR rtl-optimization/79577
 	* params.def (selsched-max-sched-times): Increase minimum to 1.
 
